--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.4.6",
+    "@mui/joy": "^5.0.0-beta.51",
     "@mui/material": "^6.4.6",
     "@tauri-apps/api": "^2",
     "@tauri-apps/plugin-opener": "^2",
